# vauxl-website

./: Cargo.toml  Dioxus.toml  index.html  input.css  package-lock.json  tailwind.config.js
public/: index.html  output.css
src/: header.rs  main.rs  routes.rs
src/routes/: error_404.rs  home.rs
