[package]
name = "vauxl-website"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = {version = "0.6.3", features = ["web", "fullstack"]}
dioxus-web = { version = "0.6.3"}
web-sys = "0.3.77"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
web = ["dioxus/web"]
