[package]
name = "vauxl-website"
version = "0.0.0"
authors = ["CozyBear"]
edition = "2024"
description = "The Website to the VoIP and Chat App Vauxl"
license = "GPL-3"
repository = "https://github.com/VauxlNet/vauxl-website"
homepage = "https://vauxl.net"
documentation = "https://docs.vauxl.net"

[dependencies]
dioxus = {version = "0.6.3", features = ["web", "fullstack"]}
dioxus-web = { version = "0.6.3"}
web-sys = "0.3.77"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
web = ["dioxus/web"]
